Add warning message on first start

--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -79,6 +79,9 @@
       <setting name="JSONDurationProperty" serializeAs="String">
         <value>duration</value>
       </setting>
+      <setting name="FirstStart" serializeAs="String">
+        <value>True</value>
+      </setting>
     </Scrubbler.Properties.Settings>
   </userSettings>
   <system.net>
