--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -6,7 +6,8 @@
   <package id="ComposableAsync.Core" version="1.3.0" targetFramework="net461" />
   <package id="DiscogsClient" version="2.7.1" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.2.0" targetFramework="net461" />
-  <package id="Microsoft.NETCore.Platforms" version="6.0.0" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="6.0.1" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Moq" version="4.16.1" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
@@ -16,7 +17,7 @@
   <package id="Octokit" version="0.50.0" targetFramework="net461" />
   <package id="OpenCover" version="4.7.1221" targetFramework="net461" />
   <package id="RateLimiter" version="2.2.0" targetFramework="net461" />
-  <package id="RestSharp" version="106.13.0" targetFramework="net461" />
+  <package id="RestSharp" version="107.0.3-alpha.0.2" targetFramework="net461" />
   <package id="RestSharpHelper" version="1.1.1" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
@@ -61,6 +62,8 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net461" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="5.0.0" targetFramework="net461" />
+  <package id="System.Text.Json" version="5.0.0" targetFramework="net461" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net461" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
