Revert RestSharp version

--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -17,7 +17,7 @@
   <package id="Octokit" version="0.50.0" targetFramework="net461" />
   <package id="OpenCover" version="4.7.1221" targetFramework="net461" />
   <package id="RateLimiter" version="2.2.0" targetFramework="net461" />
-  <package id="RestSharp" version="107.0.3-alpha.0.2" targetFramework="net461" />
+  <package id="RestSharp" version="106.15.0" targetFramework="net461" />
   <package id="RestSharpHelper" version="1.1.1" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
