--- a/Last.fm-Scrubbler-WPF/packages.config
+++ b/Last.fm-Scrubbler-WPF/packages.config
@@ -18,7 +18,7 @@
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
   <package id="Octokit" version="0.50.0" targetFramework="net461" />
   <package id="RateLimiter" version="2.2.0" targetFramework="net461" />
-  <package id="RestSharp" version="107.0.3-alpha.0.2" targetFramework="net461" />
+  <package id="RestSharp" version="106.15.0" targetFramework="net461" />
   <package id="RestSharpHelper" version="1.1.1" targetFramework="net461" />
   <package id="SpotifyAPI-NET" version="2.19.0" targetFramework="net461" />
   <package id="sqlite-net-pcl" version="1.4.118" targetFramework="net461" />
