Update nuget packages

--- a/Last.fm-Scrubbler-WPF/packages.config
+++ b/Last.fm-Scrubbler-WPF/packages.config
@@ -9,7 +9,7 @@
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.1.0" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.2.0" targetFramework="net461" />
   <package id="Inflatable.Lastfm.SQLite" version="1.1.999-prerelease" targetFramework="net461" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="6.0.1" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
@@ -50,7 +50,7 @@
   <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
   <package id="System.Net.Primitives" version="4.3.1" targetFramework="net461" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.6.0-preview5.19224.8" targetFramework="net461" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
   <package id="System.Reactive" version="5.0.0" targetFramework="net461" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
@@ -71,8 +71,8 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net461" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
-  <package id="System.Text.Encodings.Web" version="5.0.0" targetFramework="net461" />
-  <package id="System.Text.Json" version="5.0.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net461" />
+  <package id="System.Text.Json" version="6.0.1" targetFramework="net461" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net461" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
