Add option to filter json parsed files with less than a given playtime

--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -82,6 +82,15 @@
       <setting name="FirstStart" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="JSONMillisecondsPlayedProperty" serializeAs="String">
+        <value>ms_played</value>
+      </setting>
+      <setting name="JSONFilterShortPlayedSongs" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="JSONPlayedMillisecondsThreshold" serializeAs="String">
+        <value>1000</value>
+      </setting>
     </Scrubbler.Properties.Settings>
   </userSettings>
   <system.net>
