--- a/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
+++ b/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
@@ -308,6 +308,7 @@
     <Compile Include="Scrobbling\Data\FetchedReleaseView.xaml.cs">
       <DependentUpon>FetchedReleaseView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Scrobbling\Data\PlayLengthDatedScrobble.cs" />
     <Compile Include="Scrobbling\Data\ReleaseResultViewModel.cs" />
     <Compile Include="Scrobbling\Data\ScrobbableObjectListView.cs" />
     <Compile Include="Scrobbling\Data\SetlistResultViewModel.cs" />
