--- a/Last.fm-Scrubbler-WPF/Properties/Settings.settings
+++ b/Last.fm-Scrubbler-WPF/Properties/Settings.settings
@@ -74,5 +74,14 @@
     <Setting Name="FirstStart" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="JSONMillisecondsPlayedProperty" Type="System.String" Scope="User">
+      <Value Profile="(Default)">ms_played</Value>
+    </Setting>
+    <Setting Name="JSONFilterShortPlayedSongs" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="JSONPlayedMillisecondsThreshold" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1000</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
