Update json parser default field names

--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -62,19 +62,19 @@
         <value>True</value>
       </setting>
       <setting name="JSONTrackNameProperty" serializeAs="String">
-        <value>trackName</value>
+        <value>master_metadata_track_name</value>
       </setting>
       <setting name="JSONArtistNameProperty" serializeAs="String">
-        <value>artistName</value>
+        <value>master_metadata_album_artist_name</value>
       </setting>
       <setting name="JSONAlbumNameProperty" serializeAs="String">
-        <value>albumName</value>
+        <value>master_metadata_album_album_name</value>
       </setting>
       <setting name="JSONAlbumArtistNameProperty" serializeAs="String">
         <value>albumArtist</value>
       </setting>
       <setting name="JSONTimestampProperty" serializeAs="String">
-        <value>time</value>
+        <value>ts</value>
       </setting>
       <setting name="JSONDurationProperty" serializeAs="String">
         <value>duration</value>
