--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ before_build:
 build_script:
  - msbuild /verbosity:quiet "Last.fm-Scrubbler-WPF.sln"
 test_script:
-  - cmd: %UserProfile%\.nuget\packages\opencover\4.7.1221\tools\OpenCover.Console.exe -register:user target:"Last.fm-Scrubbler-WPF-Test\bin\Debug\Last.fm-Scrubbler-WPF-Test.exe" output:".\coverage.xml" -excludebyfile:"*.xaml.cs;*.xaml;*.g.cs" filter:"+[Last.fm-Scrubbler-WPF]Scrubbler*"
+  - cmd: '%UserProfile%\.nuget\packages\opencover\4.7.1221\tools\OpenCover.Console.exe -register:user target:"Last.fm-Scrubbler-WPF-Test\bin\Debug\Last.fm-Scrubbler-WPF-Test.exe" output:".\coverage.xml" -excludebyfile:"*.xaml.cs;*.xaml;*.g.cs" filter:"+[Last.fm-Scrubbler-WPF]Scrubbler*"'
 after_test:
   - ps: |
       $env:PATH = 'C:\msys64\usr\bin;' + $env:PATH
