Implement short played filter for CSV parsing

--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -86,9 +86,18 @@
         <value>ms_played</value>
       </setting>
       <setting name="JSONFilterShortPlayedSongs" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="JSONPlayedMillisecondsThreshold" serializeAs="String">
+        <value>1000</value>
+      </setting>
+      <setting name="CSVMillisecondsPlayedFieldIndex" serializeAs="String">
+        <value>6</value>
+      </setting>
+      <setting name="CSVFilterShortPlayedSongs" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="CSVPlayedMillisecondsThreshold" serializeAs="String">
         <value>1000</value>
       </setting>
     </Scrubbler.Properties.Settings>
