--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -100,6 +100,12 @@
       <setting name="CSVPlayedMillisecondsThreshold" serializeAs="String">
         <value>1000</value>
       </setting>
+      <setting name="AutoConnectAppleMusic" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="UseRichPresenceAppleMusic" serializeAs="String">
+        <value>True</value>
+      </setting>
     </Scrubbler.Properties.Settings>
   </userSettings>
   <system.net>
