--- a/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
+++ b/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Helper\FileParser\IFileParserFactory.cs" />
     <Compile Include="Helper\IProcessManager.cs" />
     <Compile Include="Helper\ProcessManager.cs" />
+    <Compile Include="Scrobbling\Data\AppleMusicInfo.cs" />
     <Compile Include="Scrobbling\Data\ArtistResultViewModel.cs" />
     <Compile Include="Scrobbling\Data\FetchedArtistView.xaml.cs">
       <DependentUpon>FetchedArtistView.xaml</DependentUpon>
@@ -135,6 +136,10 @@
     <Compile Include="Scrobbling\Data\TagViewModel.cs" />
     <Compile Include="Scrobbling\Data\Track.cs" />
     <Compile Include="Scrobbling\IAuthScrobbler.cs" />
+    <Compile Include="Scrobbling\Scrobbler\AppleMusicScrobbleView.xaml.cs">
+      <DependentUpon>AppleMusicScrobbleView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Scrobbling\Scrobbler\AppleMusicScrobbleViewModel.cs" />
     <Compile Include="Scrobbling\Scrobbler\ICanSelectScrobbles.cs" />
     <Compile Include="Helper\IDirectoryOperator.cs" />
     <Compile Include="Helper\IFileOperator.cs" />
@@ -359,6 +364,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Scrobbling\Scrobbler\AppleMusicScrobbleView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Scrobbling\Scrobbler\CacheScrobblerView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -533,6 +542,9 @@
     </PackageReference>
     <PackageReference Include="Extended.Wpf.Toolkit">
       <Version>4.6.1</Version>
+    </PackageReference>
+    <PackageReference Include="FlaUI.UIA3">
+      <Version>4.0.0</Version>
     </PackageReference>
     <PackageReference Include="Hardcodet.NotifyIcon.Wpf">
       <Version>2.0.1</Version>
